--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.1.1",
     "@hotwired/turbo-rails": "^7.2.4",
+    "axios": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "redux-logger": "^3.0.6",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0"
   },
